# mantis-screen

./: .gitignore  CODING_TASK.md  Cargo.toml  README.md  config.toml  example-config.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: add_liquidity.rs  fetch_pool.rs  fetch_pool_info.rs  fetch_pool_keys.rs  mod.rs  remove_liquidity.rs
src/instructions/: add_liquidity.rs  mod.rs  remove_liquidity.rs
src/utils/: amount.rs  client.rs  compute_budget.rs  confirmation.rs  mod.rs  printer.rs  pubkey.rs
